Recommendation category front-end application_css before application_20250103